# CICD

./: .clang-tidy  VERSION.txt
.github/workflows/: cmake-multi-platform.yml  hello.yml  mannal_package.yml
untitled34/: CMakeLists.txt  main.cpp
